// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
package tcHistory.protobuf;

enum AckEnum {
  ACK_NOT_RECEIVED = 0;
  ACK_SUCCESS = 1;
  ACK_FAILURE = 2;
}
