// Produced by Acceleo JavaScript Generator 1.1.0
package tcHistory.protobuf;

enum SendTypeEnum {
  SENDTYPE_FILE = 0;
  SENDTYPE_TIME_TAGGED_TC = 1;
  SENDTYPE_TCIMMEDIATE = 2;
  SENDTYPE_RC = 3;
  SENDTYPE_TC_LONG = 4;
  SENDTYPE_TC_11 = 5;
  SENDTYPE_TC_13 = 6;
}
